--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "astro": "^4.16.6",
     "gsap": "^3.12.5",
     "tailwindcss": "^3.4.14"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
