--- a/src/datas/projects.json
+++ b/src/datas/projects.json
@@ -6,11 +6,11 @@
 		"year": 2024,
 		"description": "Refonte du site Eliophot, agence de communation et marketing 360, spécialisée dans les marques lifestyle prenium et luxe.",
 		"image": {
-			"src": "/projets/eliophot.png",
+			"src": "/projets/eliophot.webp",
 			"alt": "Capture d'écran du site web de l'entreprise Eliophot avec un design moderne"
 		},
 		"imageMobile": {
-			"src": "/projets/eliophot-mobile.png",
+			"src": "/projets/eliophot-mobile.webp",
 			"alt": "Capture d'écran du site web de l'entreprise Eliophot avec un design moderne"
 		}
 	},
@@ -21,11 +21,11 @@
 		"year": 2024,
 		"description": "Conception d'un multi-site regroupant un ensemble d'établissements (hôtels, restaurants, boutiques) situés à Verbier, en Suisse.",
 		"image": {
-			"src": "/projets/kvhotels.png",
+			"src": "/projets/kvhotels.webp",
 			"alt": "Capture d'écran du site web du groupe KV Hôtels avec un design moderne et une vue sur la montagne"
 		},
 		"imageMobile": {
-			"src": "/projets/kvhotels-mobile.png",
+			"src": "/projets/kvhotels-mobile.webp",
 			"alt": "Capture d'écran du site web du groupe KV Hôtels avec un design moderne et une vue sur la montagne"
 		}
 	},
@@ -36,11 +36,11 @@
 		"year": 2024,
 		"description": "Développement d'un site web pour un hôtel 3 étoiles situé à Paris. Un site web original et chaleureux tout en couleur, accompagné d'une légère touche de folie.",
 		"image": {
-			"src": "/projets/folie-des-pres.png",
+			"src": "/projets/folie-des-pres.webp",
 			"alt": "Capture d'écran du site web de l'hôtel Folie des prés avec un design moderne et coloré"
 		},
 		"imageMobile": {
-			"src": "/projets/folie-des-pres-mobile.png",
+			"src": "/projets/folie-des-pres-mobile.webp",
 			"alt": "Capture d'écran du site web de l'hôtel Folie des prés avec un design moderne et coloré"
 		}
 	},
@@ -51,11 +51,11 @@
 		"year": 2024,
 		"description": "Développement d'un site web moderne et élégant, le tout accompagné d'animations fluides et délicates.",
 		"image": {
-			"src": "/projets/tsc.png",
+			"src": "/projets/tsc.webp",
 			"alt": "Capture d'écran du site web du groupe The Social Club avec un design élégant et raffiné"
 		},
 		"imageMobile": {
-			"src": "/projets/tsc-mobile.png",
+			"src": "/projets/tsc-mobile.webp",
 			"alt": "Capture d'écran du site web du groupe The Social Club avec un design élégant et raffiné"
 		}
 	},
@@ -66,11 +66,11 @@
 		"year": 2024,
 		"description": "Intégrer une maquette en mobile-first et implémenter des animations avec SASS, sur la base d'une maquette Figma.",
 		"image": {
-			"src": "/projets/ohmyfood.png",
+			"src": "/projets/ohmyfood.webp",
 			"alt": "Capture d'écran du site web Ohmyfood avec un design coloré et vue sur une carte de restaurant"
 		},
 		"imageMobile": {
-			"src": "/projets/ohmyfood-mobile.png",
+			"src": "/projets/ohmyfood-mobile.webp",
 			"alt": "Capture d'écran du site web Ohmyfood avec un design coloré et vue sur une carte de restaurant"
 		}
 	},
@@ -81,11 +81,11 @@
 		"year": 2024,
 		"description": "Implémenter le front-end de cette application de location de logements, le tout de façon responsive.",
 		"image": {
-			"src": "/projets/kasa.png",
+			"src": "/projets/kasa.webp",
 			"alt": "Capture d'écran du site web Kasa"
 		},
 		"imageMobile": {
-			"src": "/projets/kasa-mobile.png",
+			"src": "/projets/kasa-mobile.webp",
 			"alt": "Capture d'écran du site web Kasa"
 		}
 	},
@@ -96,11 +96,11 @@
 		"year": 2024,
 		"description": "Rendre le site web de cette architecte d'intérieur dynamique et fonctionnel.",
 		"image": {
-			"src": "/projets/sophie-bluel.png",
+			"src": "/projets/sophie-bluel.webp",
 			"alt": "Capture d'écran du site web de la photographe Sophie Bluel"
 		},
 		"imageMobile": {
-			"src": "/projets/sophie-bluel-mobile.png",
+			"src": "/projets/sophie-bluel-mobile.webp",
 			"alt": "Capture d'écran du site web de la photographe Sophie Bluel"
 		}
 	}
