--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"@astrojs/sitemap": "^3.2.1",
 		"@astrojs/tailwind": "^5.1.2",
 		"astro": "^4.16.6",
 		"gsap": "^3.12.5",
